package net.ddns.pray;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class EngsoftApplication {

	public static void main(String[] args) {
		SpringApplication.run(EngsoftApplication.class, args);
	}

}
